Fixed mapping of PriceOfferDTO for listing price offers for approvers.